--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<h1>{{numero}}</h1>
-<button (click)="sendLogin()">Log In</button>
-
-<h1>la respueste es : {{($respuesta| async)?.name}}</h1>
+<app-project-list></app-project-list>
