--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -1,1 +1,6 @@
-<p>project works!</p>
+<div>
+    <p>{{project.name}}</p>
+    <p>{{project.description}}</p>
+    <button (click)="delete()">borrar</button>
+    <button (click)="edit()">editar</button>
+</div>
