--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -1,6 +1,12 @@
 <div>
     <p>{{project.name}}</p>
     <p>{{project.description}}</p>
-    <button (click)="delete()">borrar</button>
-    <button (click)="edit()">editar</button>
+    <p>{{project.realizationDate}}</p>
+    <p *ngIf="project.link">{{project.link}}</p>
+    <button (click)="deleteProject()">borrar</button>
+    <button (click)="openProjectForm()">editar</button>
+    <app-modal *ngIf="showProjectForm" (click)="closeProjectForm()">
+        <app-dynamic-form [questions]="editProjectQuestions" (click)="$event.stopPropagation()"
+            [onSubmit]="editProject"></app-dynamic-form>
+    </app-modal>
 </div>
