--- a/src/app/components/project-list/project-list.component.html
+++ b/src/app/components/project-list/project-list.component.html
@@ -1,13 +1,8 @@
-<ng-container *ngIf="$projects; else cargando ">
-    <div *ngFor="let project of $projects|async">
-        <app-project [project]="project" (projectDeletedEvent)="getProjects()"></app-project>
-    </div>
-    <button (click)="openProjectForm()">añadir Projecto</button>
-    <app-project-form (projectAddedEvent)="getProjects()"></app-project-form>
-</ng-container>
-<ng-template #cargando>
-    <h1>cargando</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda velit officiis vitae. Eaque expedita
-        laudantium sunt exercitationem provident ipsa ratione, earum deserunt reprehenderit, pariatur reiciendis sint
-        est labore in accusamus!</p>
-</ng-template>
+<div *ngFor="let project of $projects|async">
+    <app-project [project]="project" (changeInProjects)="updateProjects()"></app-project>
+</div>
+<button (click)="openProjectForm()">añadir Projecto</button>
+<app-modal *ngIf="showProjectForm" (click)="closeProjectForm()">
+    <app-dynamic-form [questions]="newProjectQuestions" [onSubmit]="addProject"
+        (click)="$event.stopPropagation()"></app-dynamic-form>
+</app-modal>
