--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<div>
-    <img *ngIf="($profilePicture | async) != null ;else noPicture" [src]="$profilePicture | async" class="pfp">
-    <input type="file" accept="image/jpeg, image/png" (change)="uploadProfilePicture($event)">
+<!-- <input type="file" accept="image/jpeg, image/png" (change)="uploadProfilePicture($event)"> -->
+
+<div class="main-container">
+    <app-profile></app-profile>
 </div>
 <ng-template #noPicture>
     <p>no hay foto</p>
