--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+
+:root {
+    font-size: clamp(.9rem, calc(1.8vw+1vh), 1.3rem);
+}
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
 html:has(.modal) {
     overflow: hidden;
 }
