added basic education

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 
 <div class="main-container">
     <app-profile></app-profile>
+    <app-education-list></app-education-list>
 </div>
 <ng-template #noPicture>
     <p>no hay foto</p>
