--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -33,6 +33,7 @@
     flex-direction: column;
     align-items: center;
     margin-top: -3.5rem;
+    padding: 0 2rem;
 }
 
 .profile-picture-container {
