added all components crud

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,10 @@
 
 <div class="main-container">
     <app-profile></app-profile>
+    <app-experience-list></app-experience-list>
     <app-education-list></app-education-list>
+    <app-skill-list></app-skill-list>
+    <app-project-list></app-project-list>
 </div>
 <ng-template #noPicture>
     <p>no hay foto</p>
