--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -4,6 +4,7 @@
     <p>{{project.description}}</p>
     <p>{{project.realizationDate}}</p>
     <p *ngIf="project.link">{{project.link}}</p>
+    <img *ngIf="project.portrait" [src]="project.portrait.url" style="width: 50px;height: 50px;">
 
 </div>
 
