--- a/src/app/components/experience-list/experience-list.component.html
+++ b/src/app/components/experience-list/experience-list.component.html
@@ -1,6 +1,6 @@
 <h1>Experiencias Laborales</h1>
-<mat-icon (click)="openForm()">add</mat-icon>
-<app-experience *ngFor="let experience of experiences" [experience]="experience"
+<mat-icon (click)="openForm()" *ngIf="isEditable">add</mat-icon>
+<app-experience *ngFor=" let experience of experiences" [experience]="experience"
     (deleted)="deleteExperience(experience)" (updated)="updateExperience($event)"></app-experience>
 
 <app-modal-form *ngIf="showForm" [questions]="questions" [onSubmit]="addExperience"
