--- a/src/app/components/modal/modal.component.css
+++ b/src/app/components/modal/modal.component.css
@@ -4,6 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 999;
     background-color: rgba(0, 0, 0, .8);
     display: grid;
     place-content: center;
