--- a/src/app/components/bar/bar.component.html
+++ b/src/app/components/bar/bar.component.html
@@ -3,6 +3,6 @@
     <button (click)="openForm()">login</button>
 </div>
 
-<app-modal-form *ngIf="showForm" [questions]="[]" [onModalClick]="closeForm" [onSubmit]="login">
+<app-modal-form *ngIf="showForm" [questions]="questions" [onModalClick]="closeForm" [onSubmit]="login">
 
 </app-modal-form>
