--- a/src/app/components/add-button/add-button.component.html
+++ b/src/app/components/add-button/add-button.component.html
@@ -1,4 +1,4 @@
-<div
+<button
     class="rounded-full bg-green-500 grid place-content-center aspect-square w-7 text-white hover:bg-white hover:text-green-500 hover:border-2 hover:border-green-500 transition-colors">
-    <mat-icon>edit</mat-icon>
-</div>
+    <mat-icon>add</mat-icon>
+</button>
