--- a/src/app/components/education-list/education-list.component.html
+++ b/src/app/components/education-list/education-list.component.html
@@ -1,4 +1,4 @@
-<div style="display: flex; justify-content: space-between;">
+<div style="display: flex; justify-content: space-between;" class="">
     <h1 style="width: fit-content; margin: 0;">Educaciones</h1><mat-icon *ngIf="isEditable"
         (click)="openEducationForm()">add</mat-icon>
 </div>
