--- a/src/app/components/bar/bar.component.html
+++ b/src/app/components/bar/bar.component.html
@@ -1,14 +1,19 @@
-<div class="bar">
-    <div (click)="navHome()">logo</div>
+<div class="flex items-center justify-between ">
+    <div (click)="navHome()" class="flex items-center cursor-pointer">
+        <img src="/assets/argentina-programa.png" alt="image" class="aspect-square w-12">
+        <span class="font-semibold text-base">Argentina Programa</span>
+    </div>
     <ng-container *ngIf="isLoggedIn ;then logoutButton;else loginButton"></ng-container>
 </div>
 
-<app-modal-form *ngIf="showForm" [questions]="questions" [onModalClick]="closeForm" [onSubmit]="login">
-
+<app-modal-form *ngIf="showForm" [questions]="questions" [onModalClick]="closeForm" [onSubmit]="login"
+    [disabler]="disabler.asObservable()">
 </app-modal-form>
 <ng-template #logoutButton>
-    <button (click)="logout()">Logout</button>
+    <button (click)="logout()"
+        class=" px-3 py-1 rounded-md border-red-500 border text-red-500 hover:bg-red-500 hover:text-white  transition-colors">Logout</button>
 </ng-template>
 <ng-template #loginButton>
-    <button (click)="openForm()">Login</button>
+    <button (click)="openForm()"
+        class=" px-3 py-1 rounded-md border-green-500 border text-green-500 hover:bg-green-500 hover:text-white transition-colors">Login</button>
 </ng-template>
