--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,18 +1,23 @@
-<div>
-    <div *ngIf="isEditable">
-        <mat-icon (click)="openForm()">edit</mat-icon>
-        <mat-icon (click)="delete()">close</mat-icon>
+<div class="flex rounded-lg gap-11">
+
+    <div class="w-full flex">
+        <div class="w-40 grid place-content-center">
+            <img class="aspect-square object-cover w-11" *ngIf="experience.workplace.logo"
+                [src]="experience.workplace.logo.url" alt="dsa">
+        </div>
+        <div class="w-full">
+            <p class="text-lg font-medium mb-0">{{experience.position}}</p>
+            <p class="text-gray-500">{{experience.workplace.name}}</p>
+            <p class="text-gray-500">{{experience.startDate |date:'dd/MM/yyyy'}} - {{experience.finishDate |
+                date:'dd/MM/yyyy'}}
+            </p>
+            <p>{{experience.description}}</p>
+        </div>
     </div>
-    <div>
-        <h3>Empresa</h3>
-        <p>{{experience.workplace.name}}</p>
-        <img style="width: 50px;height: 50px; object-fit: cover;" *ngIf="experience.workplace.logo"
-            [src]="experience.workplace.logo.url" alt="dsa">
+    <div *ngIf="isEditable" class="flex flex-col justify-evenly items-center">
+        <app-edit-button (click)="openForm()"></app-edit-button>
+        <app-delete-button (click)="delete()"></app-delete-button>
     </div>
-    <h3>Datos</h3>
-    <p>{{experience.position}}</p>
-    <p>{{experience.description}}</p>
-    <p>{{experience.startDate | date}} - {{experience.finishDate | date}}</p>
 </div>
 
 <app-modal-form *ngIf="showForm" [questions]="questions" [onSubmit]="edit" [onModalClick]="closeForm"></app-modal-form>
