lacks a litle bit of styling

--- a/src/app/components/bar/bar.component.html
+++ b/src/app/components/bar/bar.component.html
@@ -11,9 +11,9 @@
 </app-modal-form>
 <ng-template #logoutButton>
     <button (click)="logout()"
-        class=" px-3 py-1 rounded-md border-red-500 border text-red-500 hover:bg-red-500 hover:text-white  transition-colors">Logout</button>
+        class="font-semibold px-3 py-1 rounded-md border-red-500 border-2 text-red-500 hover:bg-red-500 hover:text-white  transition-colors">Logout</button>
 </ng-template>
 <ng-template #loginButton>
     <button (click)="openForm()"
-        class=" px-3 py-1 rounded-md border-green-500 border text-green-500 hover:bg-green-500 hover:text-white transition-colors">Login</button>
+        class="font-semibold px-3 py-1 rounded-md border-green-500 border-2 text-green-500 hover:bg-green-500 hover:text-white transition-colors">Login</button>
 </ng-template>
