--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -1,16 +1,21 @@
-<div [ngClass]="{'deleted': isBeingDeleted}">
-    <div style="display: flex; justify-content: right;" *ngIf="isEditable">
-        <mat-icon (click)="openForm()">edit</mat-icon>
-        <mat-icon (click)="delete()">close</mat-icon>
+<div class="flex rounded-lg gap-11">
+
+    <div class="w-full flex">
+        <div class="w-40 grid place-content-center">
+            <img class="aspect-square object-cover w-11" *ngIf="education.school.logo" [src]="education.school.logo.url"
+                alt="dsa">
+        </div>
+        <div class="w-full">
+            <p class="text-lg font-medium mb-0">{{education.school.name}}</p>
+            <p class="text-gray-500">{{education.title}}</p>
+            <p class="text-gray-500">{{education.startDate |date:'dd/MM/yyyy'}} - {{education.finishDate |
+                date:'dd/MM/yyyy'}}
+            </p>
+        </div>
     </div>
-    <div style="display: flex;">
-        <div><img [src]="education.school.logo ? education.school.logo.url : '/assets/no-image.png'" alt="image"
-                style="width: 4rem;aspect-ratio: 1/1;">
-        </div>
-        <div>
-            <p>{{education!.school.name}} {{education!.startDate | date}} - {{education!.finishDate |date}}</p>
-            <p>{{education!.title}}</p>
-        </div>
+    <div *ngIf="isEditable" class="flex flex-col justify-evenly items-center">
+        <app-edit-button (click)="openForm()"></app-edit-button>
+        <app-delete-button (click)="delete()"></app-delete-button>
     </div>
 </div>
 
