--- a/src/app/components/modal-form/modal-form.component.html
+++ b/src/app/components/modal-form/modal-form.component.html
@@ -1,4 +1,4 @@
 <app-modal (click)="onModalClick()">
     <app-dynamic-form [questions]="questions" [onSubmit]="onSubmit" [disabler]="disabler"
-        (click)="$event.stopPropagation()"></app-dynamic-form>
+        (click)="$event.stopPropagation()" [title]="title"></app-dynamic-form>
 </app-modal>
