--- a/src/app/components/project-list/project-list.component.html
+++ b/src/app/components/project-list/project-list.component.html
@@ -1,10 +1,20 @@
-<div>
-    <h1>Projectos</h1>
-    <mat-icon (click)="openForm()" *ngIf="isEditable">add</mat-icon>
-    <app-project *ngFor=" let project of projects" [project]="project" (deleted)="delete(project)"
-        (updated)="update($event)"></app-project>
+<div class="mt-16 flex justify-between items-center mb-10">
+    <span class="text-3xl">Proyectos</span>
+    <app-add-button (click)="openForm()" *ngIf="isEditable"></app-add-button>
 </div>
+<ng-container *ngIf="projectAreLoading ;then loading else notLoading ">
+</ng-container>
 
+<ng-template #loading>
+    <div>Cargando projectos</div>
+</ng-template>
 
+<ng-template #notLoading>
+    <app-project *ngFor="let project of projects" [project]="project" (deleted)="delete(project)"
+        (updated)="update($event)" [isEditable]="isEditable">
+    </app-project>
+    <div *ngIf="projects!.length==0">No hay proyectos</div>
+</ng-template>
 
-<app-modal-form *ngIf="showForm" [questions]="questions" [onSubmit]="add" [onModalClick]="closeForm"></app-modal-form>
+<app-modal-form *ngIf="showForm" [title]="'Añadir Proyecto'" [questions]="questions" [onSubmit]="add"
+    [onModalClick]="closeForm"></app-modal-form>
